# census-query-builder

./: main.py  pyproject.toml  query_builder.py  requirements.txt
data/: acs5_2023.parquet  acs5_2024.parquet
layouts/: query_builder.grid.json
